--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,23 @@
     <groupId>org.jboss.set</groupId>
     <artifactId>cryo-test</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <name>CRYO-TEST</name>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <jdk.min.version>1.8</jdk.min.version>
+        <junit.version>4.12</junit.version>
+    </properties>
+
+
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+            </dependency>
+        </dependencies>
 
 </project> 
